<resources>
    <string name="app_name" translatable="false">Telemed KG</string>
    <string name="notification_title">Intelehealth</string>
    <string name="notification_title_1">Application is active!</string>
    <string name="generic_the_flipping_word_next">Next</string>
    <string name="hint_required">Required</string>
    <string name="hint_optional">Optional</string>
    <string name="tag_optional">optional</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_back">Back</string>
    <string name="generic_coming_soon">Coming Soon.....</string>
    <string name="action_print">Print</string>
    <string name="action_sms">Sms</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="generic_warning">Warning!</string>
    <string name="generic_update">Update</string>
    <string name="generic_deleted">Deleted</string>
    <string name="db_first_name" translatable="false">first_name</string>
    <string name="db_middle_name" translatable="false">middle_name</string>
    <string name="db_last_name" translatable="false">last_name</string>
    <string name="db_dob" translatable="false">date_of_birth</string>
    <string name="db_phone_number" translatable="false">phone_number</string>
    <string name="db_address_line1" translatable="false">address1</string>
    <string name="db_address_line2" translatable="false">address2</string>
    <string name="db_city" translatable="false">city_village</string>
    <string name="db_state" translatable="false">state_province</string>
    <string name="db_postal_code" translatable="false">postal_code</string>
    <string name="db_country" translatable="false">country</string>
    <string name="db_gender" translatable="false">gender</string>
    <string name="db_patient_id1" translatable="false">patient_identifier1</string>
    <string name="db_patient_id2" translatable="false">patient_identifier2</string>
    <string name="db_patient_id3" translatable="false">patient_identifier3</string>
    <string name="title_activity_login">Intelehealth</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_admin_password">Admin Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="url_invalid">Check your URL.</string>
    <string name="prefix_invalid">Select a different prefix!</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">please check username and password entered</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network" translatable="false">Network Error</string>
    <string name="could_not_connect_with_server">Couldn\'t connect with server. \nPlease check your internet \nconnection.</string>
    <string name="error_location_not_selected">Please select a value form the location dropdown</string>
    <string name="error_location_not_fetched">Unable to fetch locations</string>
    <string name="permission_rationale" translatable="false">Contacts permissions are needed for providing email completions.
    </string>
    <string name="device_id">Device ID:</string>
    <string name="identification_screen_prompt_time">Time:</string>
    <string name="identification_screen_picker_hours" translatable="false">Hours</string>
    <string name="identification_screen_picker_minute" translatable="false">Minutes</string>
    <string name="cant_login_user">Can\'t log in?</string>
    <string name="email_link">Please contact your System Administrator to reset your password or send an email to support@intelehealth.io</string>
    <string name="contact_whatsapp">Please contact your System Administrator to reset your password</string>
    <string name="title_home_screen">Home</string>
    <string name="button_new_pt">New Patient</string>
    <string name="button_find_pt">Find Patient</string>
    <string name="button_diagnostic_tests">Diagnostic Tests</string>
    <string name="button_active_pt">Active Patients</string>
    <string name="menu_option_sync">Refresh Data</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_end_of_day">End of Day</string>
    <string name="menu_option_logout">Logout</string>
    <string name="title_activity_identification">Add New Patient</string>
    <string name="identification_screen_prompt_first_name">First name *</string>
    <string name="identification_screen_prompt_middle_name">Middle name</string>
    <string name="identification_screen_prompt_last_name">Last name *</string>
    <string name="identification_screen_prompt_address">Address line 1</string>
    <string name="identification_screen_prompt_address2">Address line 2</string>
    <string name="identification_screen_prompt_phone_number">Phone number</string>
    <string name="admin_password_dialog_heading">Enter Admin Password</string>
    <string name="identification_screen_prompt_gender">Gender *</string>
    <string name="identification_screen_checkbox_male">Male</string>
    <string name="identification_screen_checkbox_female">Female</string>
    <string name="identification_screen_checkbox_other">Other</string>
    <string name="identification_screen_prompt_birthday">Date of birth*</string>
    <string name="identification_screen_prompt_age">Age:</string>
    <string name="identification_screen_prompt_city">Village/Town/City *</string>
    <string name="identification_screen_prompt_state">State*</string>
    <string name="identification_screen_prompt_district">District*</string>
    <string name="identification_screen_prompt_caste">Caste</string>
    <string name="identification_screen_prompt_economic_status">Economic status</string>
    <string name="identification_screen_prompt_education">Education level</string>
    <string name="identification_screen_prompt_country">Country*</string>
    <string name="identification_screen_prompt_postal_code">Postal code</string>
    <string name="identification_screen_prompt_relationship">Son/Daughter/Wife of</string>
    <string name="identification_screen_prompt_occupation">Occupation</string>
    <string name="identification_screen_snack_patient_created">Patient created! Uploading to server.</string>
    <string name="identification_screen_error_data_fields">Error: data fields are not formatted correctly</string>
    <string name="identification_screen_dialog_age">Please enter age in years</string>
    <string name="identification_screen_dialog_error_dob">Date of birth is set for date after today</string>
    <string name="identification_screen_dialog_error_gender">Gender is not selected</string>
    <string name="identification_screen_required_fields">Please enter required fields</string>
    <string name="identification_screen_error_dob">Enter a valid DOB</string>
    <string name="identification_screen_error_age">Enter a valid age</string>
    <string name="identification_screen_text_years"> years </string>
    <string name="identification_screen_text_months"> months</string>
    <string name="identification_screen_picker_years">years</string>
    <string name="identification_screen_picker_months">months</string>
    <string name="title_activity_active_patient">Active Visits</string>
    <string name="title_activity_get_patient_history">Patient History</string>
    <string name="title_activity_search_patient">Patient Lookup</string>
    <string name="title_activity_complaint_select">Select Complaints</string>
    <string name="title_activity_complaint_questions">Answer All Questions</string>
    <string name="title_activity_complaint_node">Select Complaints</string>
    <string name="complaint_category_selected">Selected Categories:</string>
    <string name="complaint_complaint_selected">Selected Complaints:</string>
    <string name="complaint_dialog_title">Reason for visit</string>
    <string name="complaint_required">Complaint must be selected!</string>
    <string name="title_activity_question_node">QuestionNodeActivity</string>
    <string name="complaint_change_selected">Modify</string>
    <string name="question_answer_all">Are you sure you have answered all questions.</string>
    <string name="question_answer_all_phy_exam">Please answer all general exam questions.</string>
    <string name="question_duration_picker">Please enter duration</string>
    <string name="question_text_input">Please enter text</string>
    <string name="question_date_picker">Please select date</string>
    <string name="question_location_picker">Please select locations</string>
    <string name="question_number_picker">Please enter number</string>
    <string name="question_area_picker">Please enter the area (width X length)</string>
    <string name="question_range_picker">Please enter a range</string>
    <string name="question_frequency_picker">Please enter how many times</string>
    <string name="title_activity_vitals">Vitals</string>
    <string name="table_hw">Body Measurements</string>
    <string name="table_height">Height (cm)</string>
    <string name="table_weight">Weight (kg)</string>
    <string name="table_bmi">BMI </string>
    <string name="table_pulse">Pulse (bpm)</string>
    <string name="table_bp">Vital Signs</string>
    <string name="table_bpsys">BP Sys</string>
    <string name="table_bpdia">BP Dia</string>
    <string name="table_temp">Temperature (C)</string>
    <string name="table_spo2">SpO2 (%)</string>
    <string name="search_hint">Type to search patient by name…</string>
    <string name="action_search">Search</string>
    <string name="alert_none_found">Please check username and pasword entered</string>
    <string name="title_activity_patient_history">Past Medical History</string>
    <string name="title_activity_family_history">Family History</string>
    <string name="pref_header_data_sync">Data &amp; Refresh</string>
    <string name="pref_title_server_url">Server URL</string>
    <string name="pref_title_id_prefix">Location Prefix</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="action_end_visit">End Visit</string>
    <string name="cloud_restore_header">Restore form cloud</string>
    <string name="share">Share</string>
    <string name="please_select_your_reschedule_reason">Please select your reschedule reason</string>
    <string name="doctor_is_not_available">Doctor is not available</string>
    <string name="patient_is_not_available">Patient is not available</string>
    <string name="others">Others</string>
    <string name="please_enter_the_reason_details">Please enter the reason details</string>
    <string name="save_amp_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="otp_sent">6-digit OTP sent on your registered number and email.\nPlease check and enter the OTP.</string>
    <string name="no_otp_received">Didn\'t receive OTP?</string>
    <string name="strong_internet_needed">Strong internet needed</string>
    <string name="strong_internet_needed_note">Kindly make sure you have\nstrong internet connection for setup\nactivity.</string>
    <string name="okay">Okay</string>
    <string name="my_achievements">My Achievements</string>
    <string name="educational_videos">Educational videos</string>
    <string name="change_lang">Change language &amp; protocol</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log-out</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="enter_data_here">Enter data here</string>
</resources>