<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
            android:key="serverurl"
            android:title="@string/pref_title_server_url"
            android:defaultValue="http://openmrs.amal.io:8080/openmrs/ws/rest/v1/"
            android:negativeButtonText="@string/generic_cancel"
            android:positiveButtonText="@string/generic_ok"
            android:inputType="textUri"
            android:singleLine="true"
            android:maxLines="1"/>

    <EditTextPreference
            android:key="idprefix"
            android:title="@string/pref_title_id_prefix"
            android:defaultValue="JHU"
            android:negativeButtonText="@string/generic_cancel"
            android:positiveButtonText="@string/generic_ok"/>
</PreferenceScreen>
