<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.visit_summary_activity.VisitSummaryActivity">

    <item
        android:id="@+id/summary_print"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_print">

    </item>

    <item
        android:id="@+id/summary_endVisit"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/action_end_visit">

    </item>
    <item
        android:id="@+id/summary_sms"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/action_sms">

    </item>

    <item
        android:id="@+id/summary_home"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/action_home">

    </item>

    <item
        android:id="@+id/internet_icon"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title=""
        >

    </item>

</menu>