<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320dip"
    android:orientation="vertical"
    android:padding="16dip">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_reschedule_reason"
        android:textColor="@color/gray_6"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/reasonRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_is_not_available" />

        <RadioButton
            android:id="@+id/rbR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_is_not_available" />

        <RadioButton
            android:id="@+id/rbR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others" />

    </RadioGroup>

    <EditText
        android:id="@+id/reasonEtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:background="@drawable/button_bg_rounded_stroke"
        android:gravity="start|top"
        android:hint="@string/please_enter_the_reason_details"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="5"
        android:padding="8dip"
        android:scrollbars="vertical"
        android:textColor="@color/gray_5"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/submitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dip"
        android:background="@drawable/primary_bg_rounded_corners"
        android:gravity="center"
        android:minWidth="140dip"
        android:padding="8dip"
        android:text="@string/save_amp_proceed"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>