<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="io.intelehealth.client.activities.setting_activity.SettingsActivity$NotificationPreferenceFragment"
            android:title="@string/pref_header_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"/>

    <header
            android:fragment="io.intelehealth.client.activities.setting_activity.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/pref_header_data_sync"
            android:icon="@drawable/ic_sync_black_24dp"/>

    <header
        android:fragment="io.intelehealth.client.activities.setting_activity.SettingsActivity$LanguagePreferenceFragment"
        android:title="Languages"
        android:icon="@drawable/ic_translate_black_24dp"/>


    <header
        android:fragment="io.intelehealth.client.activities.setting_activity.SettingsActivity$CloudRestoreFragment"
        android:title="@string/cloud_restore_header"
        android:icon="@drawable/ic_cloud_done_black"/>

</preference-headers>
