<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.intelehealth.client.activities.vitals_activity.VitalsActivity"
    tools:showIn="@layout/activity_vitals">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/table_hw"
                android:id="@+id/textview_hw"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_height"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_weight"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_bmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_bmi"
                    android:imeOptions="actionUnspecified"
                    android:focusable="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:longClickable="false"
                    android:inputType="none"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/table_bp"
                android:id="@+id/textview_bp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:tag="@string/tag_optional"  />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/table_bpsys"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/table_bpsys"
                            android:imeOptions="actionUnspecified"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:inputType="numberDecimal"
                            android:tag="@string/tag_optional"  />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="/"
                        android:id="@+id/textView"
                        android:layout_gravity="center"
                        android:gravity="center_vertical|center_horizontal" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/table_bpdia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/table_bpdia"
                            android:imeOptions="actionUnspecified"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:inputType="numberDecimal"
                            android:tag="@string/tag_optional"  />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
            </TableLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_spo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_spo2"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_pulse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_pulse"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/table_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_temp"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:tag="@string/tag_optional"  />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
