<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textview_enter_mobileno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:text="@string/enter_verification_code"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/common_button_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_mobile_no_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_enter_mobileno"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/otp_sent"
        android:textColor="@color/textColorGray"
        android:textSize="@dimen/common_label_text_size" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        android:layout_marginTop="@dimen/margin_15"
        app:hint="-"
        android:gravity="left"
        android:layout_below="@+id/textview_mobile_no_note"
        app:inputType="number"
        app:password="false"
        app:pinBackground="@drawable/ui2_common_input_bg"
        app:pinHeight="42dp"
        app:pinLength="6"
        app:pinWidth="35dp" />
    <TextView
        android:id="@+id/textview_no_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinview_otp"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/no_otp_received"
        android:textColor="@color/textColorGray"
        android:textSize="@dimen/common_label_text_size" />

</RelativeLayout>