<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    app:cardCornerRadius="@dimen/corner_radius_8dp"
    app:cardElevation="@dimen/hamburger_margin_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_24">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_18sp"
            android:text="@string/please_enter_text"/>

        <EditText
            android:id="@+id/editText_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edittext_textcolor"
            android:layout_below="@+id/message"
            android:background="@drawable/edittext_border"
            android:gravity="center_vertical"
            android:textSize="@dimen/edittext_textsize_16sp"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_data_here"
            android:paddingStart="@dimen/fu_margin_start"
            android:paddingTop="@dimen/fu_margin_start"
            android:paddingEnd="@dimen/margin_16dp"
            android:paddingBottom="@dimen/margin_10"
            />

        <Button
            android:id="@+id/sharebtn"
            style="@style/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_below="@+id/editText_mobileno"
            android:background="@drawable/ui2_common_primary_bg"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="@string/share" />



    </RelativeLayout>
</androidx.cardview.widget.CardView>