<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/iv_icon_height"
            android:layout_marginTop="@dimen/iv_icon_margin_top"
            android:src="@drawable/ui2_ic_warning_internet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/tv_internet_title_margin_top"
            android:text="@string/strong_internet_needed"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/internet_warning_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/tv_internet_desc_line_spacing"
            android:lineHeight="@dimen/tv_internet_desc_line_height"
            android:layout_marginTop="@dimen/tv_internet_desc_margin_top"
            android:text="@string/strong_internet_needed_note"
            android:textColor="@color/textColorGray"
            android:textSize="@dimen/internet_warning_note" />
        <Button
            android:id="@+id/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/btn_okay_internet_padding_start"
            android:paddingEnd="@dimen/btn_okay_internet_padding_end"
            android:layout_marginTop="@dimen/btn_okay_internet_margin_top"
            android:textSize="@dimen/btn_okay_text_size"
            android:lineHeight="21dp"
            android:layout_marginBottom="@dimen/btn_okay_internet_margin_bottom"
            android:paddingBottom="@dimen/btn_okay_internet_padding_bottom"
            android:textAlignment="center"
            android:background="@drawable/ui2_common_primary_bg"
            android:padding="@dimen/padding_15"
            android:text="@string/okay" />

    </LinearLayout>
</androidx.cardview.widget.CardView>